style.css
:root {
    --fire-red: rgb(216, 79, 45);
    --dark-slate: rgb(44, 45, 46);
    --snow-blue: rgb(160, 182, 226);
}

body {
    font-family: "Lato", sans-serif;
    color: white;
    background-color: var(--dark-slate);
    margin: 0;
}

a {
    text-decoration: none;
}

.red {
    color: var(--fire-red);
}

header {
    padding-left: 2vmax;
    padding-top: 1.5vmax;
    padding-bottom: 3.5vmax;
    padding-right: 2vmax;
    margin: 0;
    backdrop-filter: blur(2px);
    transition-delay: .3s;
    transition: 1s backdrop-filter;
}

h1 {
    margin: 0;
    font-size: calc(45px + .5vmax);
}

#header-container {
    background-image: url("images/normandale.png");
    background-position: 0% 35%;
    transition: .3s;
}

#header-container:hover {
    background-position: 0% 20%;
    transition: background-position 3s cubic-bezier(.075, .82, .165, 1);
    transition-delay: .3s;
}

#header-container:hover header {
    backdrop-filter: blur(0px);
}

#cool-line-thing {
    height: 2px;
    display: block;
    width: 70%;
    background-color: var(--fire-red);
    text-align: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    box-shadow: 0 0 3px 0 var(--fire-red);
}

#aboutme {
    margin: 0;
    margin-left: 2vmax;
    margin-top: 1.5vmax;
}

#aboutme > h2 {
    margin: 0;
    margin-bottom: .5vmax;
}

p {
    margin: 0;
}

h2 {
    font-size: calc(23px + .5vmax);
}

#projects-container {
    margin-left: 2vmax;
    margin-top: 1.5vmax;
}

#projects-container > h2 {
    margin: 0;
    margin-bottom: 1.5vmax;
}

.project {
    width: 40vmax;
    display: inline-block;
    padding: .65vmax;
    border-radius: 5px;
    overflow: hidden;
    margin-bottom: .75vmax;
    background-size: cover;
    position: relative;
}

h3 {
    margin: 0;
    margin-bottom: .5vmax;
    font-size: calc(20px + .25vw);
}

p {
    font-size: calc(16px + .125vw);
}

#p1 {
    background-image: url("images/southtown.jpg");
}

#p2 {
    background-image: url("images/nicollet.jpg");
}

#p3 {
    background-image: url("images/elections.jpg");
}

#p4 {
    background-image: url("images/infra.png");
}

.project a {
    color: var(--snow-blue);
}

@keyframes backdrop-change {
    from { backdrop-filter: brightness(50%) blur(4px); }
    to { backdrop-filter: brightness(80%) blur(0px); }
}

@keyframes backdrop-change-reversed {
    from { backdrop-filter: brightness(65%) blur(0px); }
    to { backdrop-filter: brightness(70%) blur(4px); }
}

.project::after {
    backdrop-filter: brightness(50%) blur(4px);
    content: "";
    display: block;
    position: absolute;
    width: 105%; height: 105%;
    top: 0;
    left: 0;
    animation: backdrop-change-reversed 1s forwards;
}

.project:hover::after {
    animation: backdrop-change 1s forwards;
    animation-delay: 1s;
}

.project > h3,
.project > p {
    z-index: 1;
    position: relative;
}

a {
    text-decoration: none;
}

#icons {
    position: absolute;
    right: 2vmax;
    bottom: 2vmax;
    font-size: calc(30px + .25vmax);
}

#icons i {
    margin-right: .5vmax;
    margin-left: .5vmax;
    transition: 1.5s color;
    color: white;
    transition: transform 1s;
}

#icons i:hover {
    color: var(--fire-red);
    transform: rotate(360deg);
}

.project i {
    margin-left: .5vmax;
    transition: 1.5s color;
    transition: 1s transform;
    color: white;
}

.project i:hover {
    color: var(--fire-red);
    transform: rotate(360deg);
}

